# at_des_data_driven_apps

./: README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
api/: main.py
api/models/: match.py  match_models.py  matches.py  narrative.py
api/routers/: match_router.py  matches.py  narratives.py  players.py
api/services/: match_analysis.py  match_narrator.py  match_narrator_openai.py
api/utils/: llm.py  sample_data.py  statsbomb_data.py  statsbomb_handler.py
documents/: orientacoes.txt  project_charter.md
fastapi/: main.py
fastapi/models/: match_models.py  player.py
fastapi/routers/: matches.py  players.py
fastapi/utils/: llm.py  statsbomb.py  statsbomb_handler.py
streamlit/: app.py  app_basic.py  app_final.py  app_simple.py  app_v2.py  dashboard.py  requirements.txt
streamlit/utils/: dashboard.py  data_loader.py  visualization.py
tests/: analyze_statsbomb_data.py  conftest.py  debug_events.py  simple_test.py  statsbomb_data_explorer.py  test_analysis.py  test_api.py  test_api_integration.py  test_endpoints.py  test_gemini.py
tests/statsbomb_samples/: competitions.json  lineup_Colombia.json  lineup_England.json  matches.json
