[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football_analysis"
version = "1.0.0"
authors = [
    { name = "Giovano M Panatta", email = "giovano.m.panatta@gmail.com" },
]
description = "Football Analysis API using StatsBomb data"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "statsbombpy",
    "pandas",
    "python-dotenv",
    "google-generativeai",
    "requests",
    "pytest",
    "httpx",
]

[tool.setuptools]
packages = ["api", "api.routers", "api.services", "api.utils"]
